--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Andreazo Silva <andreazocoisas@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "prod": "node dist/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
