--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
-    "sucrase": "^3.15.0"
+    "sucrase": "^3.15.0",
+    "yup": "^0.29.0"
   }
 }
