--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prod": "node dist/server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.686.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.4",
     "sucrase": "^3.15.0",
