--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
+    "build":"sucrase ./src -d ./dist  --transforms imports",
     "prod": "node dist/server.js"
   },
   "dependencies": {
